# sumcheck-protocol

./: .gitignore  Cargo.toml  benchmark_results.csv  benchmark_results_d3.csv  benchmark_results_d6.csv  benchmark_results_d9.csv  plot_benchmarks.py  run_all.sh  run_perf.sh
src/: main.rs  protocol.rs  prover.rs  utils.rs  verifier.rs
src/improved/: arithmetic.rs  benchmark.rs  bigint_field.rs  bigint_sumcheck.rs  engine.rs  mod.rs  protocol.rs  prover.rs  streaming.rs  verifier.rs
src/naive/: benchmark.rs  mod.rs  protocol.rs  prover.rs  verifier.rs
